# dot.files

./: .gitignore  .gitmodules  README.md  brewfile.txt  default_zshrc
710-151KB/: .alias  .xbindkeysrc  .zshrc  larrydavid.zsh-theme  my-pywal-compatible.zsh-theme  my.zsh-theme  pavucontrol.ini
710-151KB/alacritty/: alacritty.toml  alacritty.yml  alacritty.yml.bak
710-151KB/awesome/: rc.lua
710-151KB/bottom/: bottom.toml
710-151KB/dconf/: user
710-151KB/dunst/: dunstrc
710-151KB/htop/: htoprc
710-151KB/i3/: config
710-151KB/libinput-gestures/: libinput-gestures.conf
710-151KB/ly/: config.ini
710-151KB/neofetch/: config.conf
710-151KB/nvim/: init.lua  lazy-lock.json
710-151KB/picom/: picom.conf
710-151KB/polybar.old/: battery.zsh  config.ini  launch.sh
710-151KB/pulse/: adf3657efd9641cca6261216d1b83163-card-database.tdb  adf3657efd9641cca6261216d1b83163-device-volumes.tdb  adf3657efd9641cca6261216d1b83163-stream-volumes.tdb  cookie
710-151KB/ranger/: rc.conf
710-151KB/rofi/: config.rasi  my_custom_theme.rasi
ASUS-FX505DT/: .alias  .zshrc
Archintosh/: .alias  README.md
Custom Scripts/: alias_manager  notes.sh  wifipass.sh
M1/: .alias  .zshrc
M1-Pro/: .alias  .zshrc
M1/htop/: htoprc
Zsh Hotkey Profile/: .zshrc  aliases.txt
common/scripts/dircat/: Cargo.toml
common/scripts/dircat/src/: main.rs
maclinux/: .zshrc
scripts/: termcolors.sh
window-managment/: .skhdrc  .yabairc
zsh/: .zshrc  BEARDED.itermcolors  COLORS.itermcolors
zshcalm/: .zsh_history  .zshrc
zshmini/: .zcompdump-Aidan’s MacBook Pro-5.9  .zsh_history
(+257 files in other folders)
