[package]
name = "dircat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
rayon = "1.5"
log = "0.4"
env_logger = "0.9"
clipboard = "0.5.0"
regex = "1.10.5"
indicatif = "0.17.8"
mime_guess = "2.0.5"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"